start.module.css: fix opacity for notebookLink (transform from non-visible to visible)

--- a/src/styles/start.module.css
+++ b/src/styles/start.module.css
@@ -151,11 +151,11 @@ main .welcome h1:hover {
 
 @keyframes appear {
   from {
-    display: none;
+    opacity: 0;
     font-size: 0.8rem;
   }
   to {
-    display: block;
+    opacity: 1;
   }
 }
 
